...
            app:titleCentered="true"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- "Manage Profiles" Button -->
    <Button
        android:id="@+id/manageProfilesButton"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginBottom="412dp"
        android:backgroundTint="#73673AB7"
        android:text="Manage Profiles"
        android:textColor="@android:color/white"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- "Manage Events" Button -->

    <Button
        android:id="@+id/manageEventsButton"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#73673AB7"
        android:text="Manage Events"
        android:textColor="@android:color/white"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageProfilesButton"
        app:layout_constraintVertical_bias="0.0" />

    <!-- "Manage Images" Button -->
    <Button
        android:id="@+id/manageImagesButton"
        android:layout_width="185dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#73673AB7"
        android:text="Manage Images"
        android:textColor="@color/white"
...
