...
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- RecyclerView for facilities -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/facilitiesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/searchName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
